--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7218,3 +7218,7 @@ table.dtp-picker-days thead {
     font-size: 45px;
     color: #3C5C95;
 }
+.icon_facebook {
+    width: auto !important;
+    height: auto !important;
+}
