update reffalcode and update link

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9957,3 +9957,6 @@ ul.box-lp > li a {
     background-position: center;
     background-repeat: no-repeat;
 }
+.homepage_sologan {
+    color: #fff;
+}
