--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7222,3 +7222,37 @@ table.dtp-picker-days thead {
     width: auto !important;
     height: auto !important;
 }
+.floatright {
+    float: right;
+}
+.h-report {
+    bottom: 70px;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    display: inherit;
+}
+.h-help {
+    right: 70px;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    display: inherit;
+}
+.h-create {
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    display: inherit;
+}
+.show-hover {
+    opacity: 1 !important;
+    display: block;
+}
+.hidden-hover {
+    opacity: 0 !important;
+    display: none;
+}
+.h-help, .h-report :hover {
+    display: block;
+}
