--- a/public/frontend/css/blogs/homepage.css
+++ b/public/frontend/css/blogs/homepage.css
@@ -32,7 +32,7 @@
 	background-color: #fff;
 	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
 }
-.box_blog:hover {
+.box_blog:hover, .box_blog_small:hover {
 	-webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
     box-shadow: 3px 5px 1px 0 rgba(0, 0, 0, 0.2), 3px 0px 1px 0 rgba(0, 0, 0, 0.09) !important;
 }
@@ -50,8 +50,11 @@
 .read_more_blog > a {
 	color: #000;
 }
-.blog_left, .blog_right {
-	padding: 0px 5px;	
+.blog_left {
+	padding: 0 5px 0px 15px;
+}
+.blog_right {
+	padding: 0 15px 0px 5px;	
 }
 .list_news {
 	padding-left: 10px;
@@ -81,6 +84,30 @@
     font-weight: 500;
     color: #000;
 }
+@media only screen and (max-width:1999px) and (min-width: 1850px) {
+	.content_title {
+		width: 750px;
+	}
+	.list_news ul li {
+		max-width: 910px;
+	}
+}
+@media only screen and (max-width:1850px) and (min-width: 1700px) {
+	.content_title {
+		width: 650px;
+	}
+	.list_news ul li {
+		max-width: 910px;
+	}
+}
+@media only screen and (max-width:1700px) and (min-width: 1550px) {
+	.content_title {
+		width: 550px;
+	}
+	.list_news ul li {
+		max-width: 910px;
+	}
+}
 .icon_views {
 	margin-top: -2px;
 }
@@ -96,4 +123,26 @@
 }
 .box_tailieu {
 	background-color: transparent;
+}
+.img_cover {
+	height: 279px; 
+	border-radius: 5px;
+}
+.news_technical ul li {
+	position: relative;
+	padding: 4px 10px 4px 6px;
+	white-space: normal;
+    overflow: hidden;
+	max-width: 650px;
+}
+.content_cate {
+	display: inline-block;
+    vertical-align: top;
+    width: 300px;
+    font-weight: 500;
+    color: #000;
+    float: left;
+}
+.floatleft {
+	float: left !important;
 }
