--- a/public/frontend/css/blogs/homepage.css
+++ b/public/frontend/css/blogs/homepage.css
@@ -25,6 +25,20 @@
 	background-color: #fff;
 	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
 }
+.box_blog_pricing {
+	border-radius: 5px;
+	height: 320px;
+    margin-bottom: 10px;
+	background-color: #fff;
+	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
+}
+.box_blog_technical {
+	border-radius: 5px;
+	height: 225px;
+    margin-bottom: 10px;
+	background-color: #fff;
+	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
+}
 .box_blog_small {
 	border-radius: 5px;
 	height: 155px;
@@ -32,7 +46,7 @@
 	background-color: #fff;
 	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
 }
-.box_blog:hover, .box_blog_small:hover {
+.box_blog:hover, .box_blog_small:hover, .box_blog_technical:hover {
 	-webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
     box-shadow: 3px 5px 1px 0 rgba(0, 0, 0, 0.2), 3px 0px 1px 0 rgba(0, 0, 0, 0.09) !important;
 }
@@ -80,19 +94,11 @@
 .content_title {
 	display: inline-block;
     vertical-align: top;
-    width: 490px;
+    width: 390px;
     font-weight: 500;
     color: #000;
 }
 @media only screen and (max-width:1999px) and (min-width: 1850px) {
-	.content_title {
-		width: 750px;
-	}
-	.list_news ul li {
-		max-width: 910px;
-	}
-}
-@media only screen and (max-width:1850px) and (min-width: 1700px) {
 	.content_title {
 		width: 650px;
 	}
@@ -100,9 +106,17 @@
 		max-width: 910px;
 	}
 }
-@media only screen and (max-width:1700px) and (min-width: 1550px) {
+@media only screen and (max-width:1850px) and (min-width: 1700px) {
 	.content_title {
 		width: 550px;
+	}
+	.list_news ul li {
+		max-width: 910px;
+	}
+}
+@media only screen and (max-width:1700px) and (min-width: 1550px) {
+	.content_title {
+		width: 450px;
 	}
 	.list_news ul li {
 		max-width: 910px;
@@ -125,7 +139,10 @@
 	background-color: transparent;
 }
 .img_cover {
-	height: 279px; 
+	/*height: 279px; */
+	border-radius: 5px;
+}
+.img_cover > img {
 	border-radius: 5px;
 }
 .news_technical ul li {
@@ -145,4 +162,13 @@
 }
 .floatleft {
 	float: left !important;
+}
+.table-hover > tbody > tr:hover {
+  background-color: #D2D2D2;
+}
+.increasePrice {
+	color: #128F0C;
+}
+.decreasePrice {
+	color: red; 
 }
