--- a/public/frontend/css/blogs/homepage.css
+++ b/public/frontend/css/blogs/homepage.css
@@ -4,6 +4,7 @@
 }
 .wrap_homeblog {
 	background-color: #eeeeee;
+	padding-top: 20px;
 }
 .menu_top {
 	padding-top: 0px;
@@ -46,7 +47,16 @@
 	background-color: #fff;
 	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
 }
-.box_blog:hover, .box_blog_small:hover, .box_blog_technical:hover {
+.box_blog_large {
+	border-radius: 5px;
+	height: auto;
+	padding: 20px;
+	padding-bottom: 70px;
+    margin-bottom: 10px;
+	background-color: #fff;
+	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
+}
+.box_blog:hover, .box_blog_small:hover, .box_blog_technical:hover , .box_blog_large:hover {
 	-webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
     box-shadow: 3px 5px 1px 0 rgba(0, 0, 0, 0.2), 3px 0px 1px 0 rgba(0, 0, 0, 0.09) !important;
 }
@@ -171,4 +181,7 @@
 }
 .decreasePrice {
 	color: red; 
+}
+.documentItem {
+    padding: 10px 0;
 }
